{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 249,
  "lineage": "ce4ec3e8-a96a-667c-aae0-4264a886e2a6",
  "resources": [
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:security-group/sg-01c63ca5145cb23c5",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c63ca5145cb23c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24"
                ],
                "description": "for example",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "307307175980",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "egress_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-003d81c8d4cf12a20",
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06034fc5528a43ef3",
            "domain": "vpc",
            "id": "eipalloc-06034fc5528a43ef3",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-72-190-1.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.72.190.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fea7b163a8ef73d2",
            "domain": "vpc",
            "id": "eipalloc-0fea7b163a8ef73d2",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-242-212-139.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.212.139",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:internet-gateway/igw-065e0fd3b803dbb36",
            "id": "igw-065e0fd3b803dbb36",
            "owner_id": "307307175980",
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06034fc5528a43ef3",
            "connectivity_type": "public",
            "id": "nat-0d6f983373ee16cc6",
            "network_interface_id": "eni-05b6b4e18031fb59f",
            "private_ip": "10.1.3.112",
            "public_ip": "54.72.190.1",
            "subnet_id": "subnet-036a93e16a0725e3d"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.eip_for_nat",
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fea7b163a8ef73d2",
            "connectivity_type": "public",
            "id": "nat-0155eec040495de2a",
            "network_interface_id": "eni-02b4f5c73dfc27070",
            "private_ip": "10.1.4.234",
            "public_ip": "34.242.212.139",
            "subnet_id": "subnet-0b2fb0deeb28f40cd"
          },
          "dependencies": [
            "module.aws_vpc.aws_eip.eip_for_nat",
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_subnet.private",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv6_private_route_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-003d81c8d4cf12a20",
            "gateway_id": "",
            "id": "r-rtb-011f7b21720b1b3f82750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-011f7b21720b1b3f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_egress_only_internet_gateway.egress_ig",
            "module.aws_vpc.aws_route_table.private_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-065e0fd3b803dbb36",
            "id": "r-rtb-0bf6179e0f212d9322750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf6179e0f212d932",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-065e0fd3b803dbb36",
            "id": "r-rtb-0bf6179e0f212d9321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bf6179e0f212d932",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_internet_gateway.main_internet_gateway",
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:route-table/rtb-011f7b21720b1b3f8",
            "id": "rtb-011f7b21720b1b3f8",
            "owner_id": "307307175980",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:route-table/rtb-0bf6179e0f212d932",
            "id": "rtb-0bf6179e0f212d932",
            "owner_id": "307307175980",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a2a095a44f96dd0",
            "route_table_id": "rtb-0bf6179e0f212d932",
            "subnet_id": "subnet-0fbb7d946118f0224"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038c686bba322f720",
            "route_table_id": "rtb-0bf6179e0f212d932",
            "subnet_id": "subnet-06d8707b745a3198a"
          },
          "dependencies": [
            "module.aws_vpc.aws_route_table.public_route_table",
            "module.aws_vpc.aws_subnet.public",
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-036a93e16a0725e3d",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a93e16a0725e3d",
            "ipv6_cidr_block": "2a05:d018:143a:d102::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-069a100cce0c6ebbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private server"
            },
            "tags_all": {
              "Name": "private server"
            },
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-0b2fb0deeb28f40cd",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2fb0deeb28f40cd",
            "ipv6_cidr_block": "2a05:d018:143a:d103::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-00d7a03603f3ea0ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private server"
            },
            "tags_all": {
              "Name": "private server"
            },
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-0fbb7d946118f0224",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb7d946118f0224",
            "ipv6_cidr_block": "2a05:d018:143a:d100::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c610fa1c9ed0641b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public server"
            },
            "tags_all": {
              "Name": "Public server"
            },
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:subnet/subnet-06d8707b745a3198a",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d8707b745a3198a",
            "ipv6_cidr_block": "2a05:d018:143a:d101::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b398ece92501e9b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307307175980",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public server"
            },
            "tags_all": {
              "Name": "Public server"
            },
            "vpc_id": "vpc-0e2b74e19f5bb832c"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:307307175980:vpc/vpc-0e2b74e19f5bb832c",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08f41fc05087d4922",
            "default_route_table_id": "rtb-0c25e31d94d4706a4",
            "default_security_group_id": "sg-01c63ca5145cb23c5",
            "dhcp_options_id": "dopt-034d75425e9630aea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e2b74e19f5bb832c",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0c737cd18eef0e1a2",
            "ipv6_cidr_block": "2a05:d018:143a:d100::/56",
            "ipv6_cidr_block_network_border_group": "eu-west-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c25e31d94d4706a4",
            "owner_id": "307307175980"
          }
        }
      ]
    }
  ]
}